2011-03-23  Paul Eggert  <eggert@cs.ucla.edu>

	* term.c (produce_glyphless_glyph): Remove unnecessary test.

	* cm.c (calccost): Turn while-do into do-while, for clarity.

	Fix more problems found by GCC 4.5.2's static checks.

	* coding.c (encode_coding_raw_text): Avoid unnecessary test
	the first time through the loop, since we know p0 < p1 then.
	This also avoids a gcc -Wstrict-overflow warning.

	* lisp.h (SAFE_ALLOCA, SAFE_ALLOCA_LISP): Avoid 'int' overflow
	leading to a memory leak, possible in functions like
	load_charset_map_from_file that can allocate an unbounded number
	of objects (Bug#8318).

	* xmenu.c (set_frame_menubar): Use EMACS_UINT, not int, for indexes
	that could (at least in theory) be that large.

	* xdisp.c (message_log_check_duplicate): Return unsigned long, not int.
	This is less likely to overflow, and avoids undefined behavior if
	overflow does occur.  All callers changed.  Use strtoul to scan
	for the unsigned long integer.
	(pint2hrstr): Simplify and tune code slightly.
	This also avoids a (bogus) GCC warning with gcc -Wstrict-overflow.

	* scroll.c (do_scrolling): Work around GCC bug 48228.
	See <http://gcc.gnu.org/bugzilla/show_bug.cgi?id=48228>.

	* frame.c (Fmodify_frame_parameters): Simplify loop counter.
	This also avoids a warning with gcc -Wstrict-overflow.
	(validate_x_resource_name): Simplify count usage.
	This also avoids a warning with gcc -Wstrict-overflow.

	* fileio.c (Fcopy_file): Report error if fchown or fchmod
	fail (Bug#8306).

	* emacs.c (Fdaemon_initialized): Do not ignore I/O errors (Bug#8303).

	* process.c (Fmake_network_process): Use socklen_t, not int,
	where POSIX says socklen_t is required in portable programs.
	This fixes a porting bug on hosts like 64-bit HP-UX, where
	socklen_t is wider than int (Bug#8277).
	(Fmake_network_process, server_accept_connection):
	(wait_reading_process_output, read_process_output):
	Likewise.

	* process.c: Rename or move locals to avoid shadowing.